syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/direktiv/direktiv/pkg/flow/grpc";

import "google/protobuf/empty.proto";

import "pkg/flow/grpc/internal.proto";


service Internal {
	rpc ReportActionResults (ReportActionResultsRequest) returns (google.protobuf.Empty) {}
	rpc ActionLog(ActionLogRequest) returns (google.protobuf.Empty) {}
}
